# openbrief

./: AGENTS.md  PLAN_VOICEBOX.md  README.md
.github/workflows/: qwen-asr-smoke.yml  qwen-tts-smoke.yml  release.yml  supertonic-smoke.yml  transcribe-smoke.yml
client/: pnpm-lock.yaml
client/apps/tauri/: package.json
client/apps/tauri/scripts/: build-fluidaudio-sidecar.js  build-fluidaudio-sidecar.test.ts  build-localai-sidecar.js  build-localai-sidecar.test.ts  build-supertonic-sidecar.js  build-supertonic-sidecar.test.ts  build-voicebox-sidecar.js  build-voicebox-sidecar.test.ts  prepare-media-assets.js  prepare-media-assets.test.ts  setup-dev-sidecars.js  setup-dev-sidecars.test.ts  sign-dev-media-tools.js  sign-dev-media-tools.test.ts  tauri-sidecar-config.test.ts
client/apps/tauri/src/: index.css
client/apps/tauri/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json
client/apps/tauri/src-tauri/binaries/: .gitignore  README.md
client/apps/tauri/src-tauri/sidecars/supertonic-python/: .gitignore  openbrief_supertonic.py  pyproject.toml
client/apps/tauri/src-tauri/src/: lib.rs  media_tools.rs  provider.rs  qwen_asr.rs  stt_models.rs  supertonic.rs  trusted_paths.rs  workspace.rs
client/apps/tauri/src/app/: AppLayout.test.tsx  AppLayout.tsx  AppShell.test.ts  AppShell.tsx
client/apps/tauri/src/domain/: compatibility.test.ts  compatibility.ts  media-library.ts  provider.ts  quiz.ts  summary.test.ts  summary.ts  transcript.ts
client/apps/tauri/src/i18n/: index.tsx
docs/: LOCAL_MODEL.md  release.md
(+59 files in other folders)
